src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Amendment_Action__c</fullName>
        <description>Used to denote is a module has been Deferred or is being added to an Amendment Opportunity as a Retake</description>
        <label>Amendment Action</label>
        <picklist>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retake</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bookshop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bookshop</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <description>This field identifies the campus for which a an asset is associated to or which a student is attended.</description>
        <label>Campus</label>
        <picklist>
            <picklistValues>
                <fullName>Bloemfontein</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape Town</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durbanville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midrand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nelspruit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Port Elizabeth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potchefstroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pretoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Randburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vanderbijlpark</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancelled_dateTime__c</fullName>
        <description>Cancelled date to capture when status is cancelled.</description>
        <label>Cancelled dateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Competitive_Status__c</fullName>
        <description>Used to display the Competitive Status of the Related Product</description>
        <label>Competitive Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Publisher__c</fullName>
        <formula>Product2.Publisher__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Publisher</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Converted_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Converted_Product_in_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted Product in Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copyright_Year__c</fullName>
        <description>Copyright Year for the Product</description>
        <label>Copyright Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Identifies the Course for the Asset</description>
        <label>Course</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This Course is not associated to the Account for this Product in Use.</errorMessage>
            <filterItems>
                <field>UniversityCourse__c.Account__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UniversityCourse__c</referenceTo>
        <relationshipLabel>Products in Use</relationshipLabel>
        <relationshipName>Products_In_Use</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Identifier__c</fullName>
        <description>DM Identifier External ID field</description>
        <externalId>true</externalId>
        <label>DM Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Reference__c</fullName>
        <description>Used to document whether a Module has a Credit</description>
        <label>Discount Reference</label>
        <picklist>
            <picklistValues>
                <fullName>Financial Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Credit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Edition__c</fullName>
        <formula>Product2.Edition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollments__c</fullName>
        <label>Enrollments</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Sales_Quantity__c</fullName>
        <label>Expected Sales Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_BIU_Number_c__c</fullName>
        <externalId>true</externalId>
        <label>External_BIU_Number__c</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Forecasted_Install_Date__c</fullName>
        <label>Forecasted Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISBN_10__c</fullName>
        <description>ISBN 10 Product Field from the Product Record</description>
        <label>ISBN 10</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intake__c</fullName>
        <label>Intake</label>
        <picklist>
            <picklistValues>
                <fullName>Semester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Study Period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trimester</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_Modified_Date__c</fullName>
        <label>Legacy Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_Description__c</fullName>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode_of_Delivery__c</fullName>
        <label>Mode of Delivery</label>
        <picklist>
            <picklistValues>
                <fullName>Kiosk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Purchase/Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VS Building Block</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cartridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Net_Sales_Price__c</fullName>
        <label>Net Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Product in Use</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Module</description>
        <label>Option</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Mode_of_Delivery__c</fullName>
        <description>CORE</description>
        <label>Other Mode of Delivery</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outside_Module__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies is the Module is associated to a qualification outside of the main qualification</description>
        <label>Outside Module</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autumn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Selling_Account__c</fullName>
        <description>Displays the Primary Selling Account of the Account on the Products in Use</description>
        <formula>HYPERLINK(  Account.Primary_Selling_Account__r.Id,  Account.Primary_Selling_Account__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Selling Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if Product in Use is Primary for a University Course</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Author__c</fullName>
        <label>Product Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Campus__c</fullName>
        <description>Product Campus Field</description>
        <formula>Text(Product2.Campus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Campus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Edition__c</fullName>
        <label>Product Edition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ISBN__c</fullName>
        <label>Product ISBN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Semester__c</fullName>
        <description>Product Semester Field</description>
        <formula>Text(OptionId__r.Semester__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Semester</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <description>Populated by Field Update from Competitive Edition Status from Related Product</description>
        <label>Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <label>Publisher</label>
        <picklist>
            <picklistValues>
                <fullName>Pearson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wiley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McGraw-Hill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cengage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palgrave/Macmillan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oxford University Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elsevier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lipincott</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scholastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Products in Use</relationshipLabel>
        <relationshipName>Products_in_Use</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Products in Use</relationshipLabel>
        <relationshipName>Product_in_Use</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_by_Date__c</fullName>
        <label>Required by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rollover__c</fullName>
        <description>Indicates whether the product related to the asset has a new edition.</description>
        <formula>NOT(ISBLANK(Product2.Next_Edition__c)) &amp;&amp;  ( Product2.Next_Edition__r.Relevance_Value__c  = 10) &amp;&amp; NOT(Product2.Competitor_Product__c = TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rollover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <label>Sales Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Bookshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct to Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct to University / Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct to School</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Semester__c</fullName>
        <description>This field identifies the academic term for which a student is enrolled or completed a particular course.</description>
        <label>Semester</label>
        <picklist>
            <picklistValues>
                <fullName>1st Semester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Semester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Year</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Date__c</fullName>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Asset for NA and SA.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suggested_Order_Quantity__c</fullName>
        <label>Suggested Order Qty</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Third_Party_LMS__c</fullName>
        <description>List of Third Product Integration that a Sales Rep indicates for a Products in Use</description>
        <inlineHelpText>Please select the correct Product Integration for the Product in Use</inlineHelpText>
        <label>Third Party LMS</label>
        <picklist>
            <picklistValues>
                <fullName>Angel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlackBoard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brainhoney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CourseCompass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desire2Learn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCollege</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Transition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LearningStudio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moodle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moodlerooms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sakai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebCt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>University_Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field refers to a course which a professor is teaching</description>
        <label>University Course</label>
        <referenceTo>UniversityCourse__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Usage__c</fullName>
        <description>Usage Values for the Products in Use to Contacts</description>
        <label>Usage</label>
        <picklist>
            <picklistValues>
                <fullName>Optional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Optional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <listViews>
        <fullName>PIU_Mobile_QA</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ASSET.INSTALL_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.NAME</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ASSET.CREATED_DATE</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Product_Author__c</columns>
        <columns>Course__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>contains</operation>
            <value>srep</value>
        </filters>
        <label>PIU - Mobile QA</label>
    </listViews>
    <recordTypes>
        <fullName>US_HE_Record_Type</fullName>
        <active>true</active>
        <description>Used by US HE to enable Page Layout Assignment</description>
        <label>US HE Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>OtherModeOfDeliveryRequired</fullName>
        <active>true</active>
        <description>CORE - If &quot;Other&quot; is selected for Mode of Delivery, an Other value must be provided</description>
        <errorConditionFormula>AND(
ISPICKVAL(Mode_of_Delivery__c, &quot;Other&quot;),
ISBLANK(Other_Mode_of_Delivery__c)
)</errorConditionFormula>
        <errorDisplayField>Other_Mode_of_Delivery__c</errorDisplayField>
        <errorMessage>If &quot;Other&quot; is selected for Mode of Delivery, an Other value must be provided</errorMessage>
    </validationRules>
</CustomObject>